--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -54,21 +54,23 @@
 
 
             <div class="pt-5 mt-5">
-              <h3 class="mb-5">6 Comments</h3>
+              <h3 class="mb-5">{{ comments.count }} Comments</h3>
+              {% for comment in comments %}
+              
               <ul class="comment-list">
                 <li class="comment">
                   <div class="vcard bio">
-                    <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder">
+                    <img src="{{comment.author.userdetail.author_image.url}}" alt="Image placeholder">
                   </div>
                   <div class="comment-body">
-                    <h3>John Doe</h3>
-                    <div class="meta">June 01, 2020 at 2:21pm</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+                    <h3>{{ comment.name }}</h3>
+                    <div class="meta">{{comment.date}}</div>
+                    <p>{{comment.content}}</p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
                 </li>
 
-                <li class="comment">
+                {% comment %} <li class="comment">
                   <div class="vcard bio">
                     <img src="{% static 'images/person_1.jpg' %}" alt="Image placeholder">
                   </div>
@@ -133,36 +135,52 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
-                </li>
+                </li> {% endcomment %}
               </ul>
+              {% endfor %}
               <!-- END comment-list -->
-              
+              {% if new_comment %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                  Your comment is awaiting moderation
+                </div>
+              {% else %}
               <div class="comment-form-wrap pt-5">
                 <h3 class="mb-5">Leave a comment</h3>
-                <form action="#" class="p-5 bg-light">
-                  <div class="form-group">
-                    <label for="name">Name *</label>
-                    <input type="text" class="form-control" id="name">
-                  </div>
-                  <div class="form-group">
-                    <label for="email">Email *</label>
-                    <input type="email" class="form-control" id="email">
-                  </div>
-                  <div class="form-group">
-                    <label for="website">Website</label>
-                    <input type="url" class="form-control" id="website">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
-                  </div>
-                  <div class="form-group">
-                    <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
-                  </div>
-
+                {% if not request.user.is_authenticated %}
+                <form method="POST"  class="p-5 bg-light">
+                {% csrf_token %}
+                
+                    <div class="form-group">
+                      <label for="name">Name *</label>
+                      {{comment_form.name}}
+                    </div>
+                    <div class="form-group">
+                      <label for="email">Email *</label>
+                      {{comment_form.email}}
+                    </div>
+                  
+                    <div class="form-group">
+                      <label for="message">Message</label>
+                      {{comment_form.content}}
+                    </div>
+                    <a class="btn btn-outline-info" href="{% url 'sign_up' %}?next={{request.path}}">Log in to add a comment!</a>
+                {% else %}
+                    <div class="form-group">
+                      <label for="message">Message</label>
+                      <input type="hidden" name="name" value="{{request.user.username}}">
+                      <input type="hidden" name="email" value="{{request.user.email}}">
+                      {{comment_form.content}}
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
+                    </div>
+                {% endif %}
+                  
+               
                 </form>
+                
               </div>
+              {% endif %}
             </div>
 
           </div> <!-- .col-md-8 -->
@@ -180,10 +198,7 @@
                 <h3>Categories</h3>
                 {% for categorie in categories %}
                 <li><a href="{% url 'categories-detail' categorie.id %}">{{categorie.name}} <span>{{categorie.post_set.all.count}}</span></a></li>
-                {% comment %} <li><a href="#">Office <span>(22)</span></a></li>
-                <li><a href="#">Commercial <span>(37)</span></a></li>
-                <li><a href="#">Building <span>(42)</span></a></li>
-                <li><a href="#">Storage <span>(14)</span></a></li> {% endcomment %}
+                
                 {% endfor %}
               </div>
             </div>
@@ -194,9 +209,9 @@
               <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url({{blog.post_image.url}});"></a>
                 <div class="text">
-                  <h3 class="heading"><a href="{% url 'blog-single' blog.id %}">{{blog.title}}</a></h3>
+                  <h3 class="heading"><a href="{% url 'blog-single' blog.slug %}">{{blog.title}}</a></h3>
                   <div class="meta">
-                    <div><a href="{% url 'blog-single' blog.id %}"><span class="icon-calendar"></span>{{blog.date}}</a></div>
+                    <div><a href="{% url 'blog-single' blog.slug %}"><span class="icon-calendar"></span>{{blog.date}}</a></div>
                     <div><a href="#"><span class="icon-person"></span>{{blog.agent}}</a></div>
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
